--- a/docs/_includes/FAQ/FAQ-contenu.html
+++ b/docs/_includes/FAQ/FAQ-contenu.html
@@ -205,23 +205,13 @@
                 <span class="ds44-btnInnerText">Valider</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
             </button>
         </form>
-        <div class="ds44-collapser wysiwyg ds44-wsg-smallText ds44-mt3 ">
-            <li class="ds44-collapser_element">
-                <p role="heading" class="" aria-level="2">
-                  <button type="button" class="ds44-collapser_button">Données personnelles<i class="icon icon-down" aria-hidden="true"></i></button>
-                </p>
-                <div class="ds44-collapser_content">
-                    <ul class="ds44-list ds44-collapser_content--level2">
-                        <li>
-                          <p>Vous pouvez accéder aux données vous concernant et demander leur rectification. Vous disposez également, pour des raisons légitimes, d’un droit d’opposition, d’effacement des données et de limitation du traitement.</p>
-                          <p>L’exercice de ces droits se fait auprès du Délégué à la protection des données par courriel ou par courrier adressé au 3 Quai Ceineray, CS 94109, 44041 Nantes Cedex 1.</p>
-                          <p><a href="mailto:dpd@loire-atlantique.fr"><i class="icon icon-mail" aria-hidden="true"> </i>Envoyer un mail au délégué à la protection des données</a></p>
-                          <p><a href="44/donnees-personnelles/politique-generale-de-protection-des-donnees-personnelles/c_1307338" title="En savoir plus sur ce traitement : Politique générale de protection des données personnelles" class="ID_c_1307338"><i
-                                class="icon icon-tag" aria-hidden="true"> </i>En savoir plus sur ce traitement</a></p>
-                        </li>
-                    </ul>
-                </div>
-            </li>
+        <div class="wysiwyg ds44-wsg-smallText ds44-mt3">
+          <p>Les informations personnelles vous concernant sont collectées et traitées par le Département de Loire-Atlantique aux fins d’instruction et de réponse aux demandes reçues (courriel, formulaire de contact, courrier postal).</p>
+          <p>Vous pouvez accéder aux données vous concernant et demander leur rectification. Vous disposez également, pour des raisons légitimes, d’un droit d’opposition, d’effacement des données et de limitation du traitement.</p>
+          <p>L’exercice de ces droits se fait auprès du Délégué à la protection des données par courriel ou par courrier adressé au 3 Quai Ceineray, CS 94109, 44041 Nantes Cedex 1.</p>
+          <p><a href="mailto:dpd@loire-atlantique.fr"><i class="icon icon-mail" aria-hidden="true"> </i>Envoyer un mail au délégué à la protection des données</a></p>
+          <p><a href="44/donnees-personnelles/politique-generale-de-protection-des-donnees-personnelles/c_1307338" title="En savoir plus sur ce traitement : Politique générale de protection des données personnelles" class="ID_c_1307338"><i
+                class="icon icon-tag" aria-hidden="true"> </i>En savoir plus sur ce traitement</a></p>
         </div>
     </div>
 </div>
