--- a/docs/_includes/partage/partage-interne.html
+++ b/docs/_includes/partage/partage-interne.html
@@ -1,4 +1,4 @@
-<section class="ds44-partage ds44-flex-container ds44-flex-align-center pal ds44-mb35">
+<section class="ds44-partage ds44-flex-container ds44-flex-align-center pal">
     <h2 class="h4-like" id="idPartageRS">Partagez cette page :</h2>
     <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
         <li><a href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank" class="ds44-rsLink" title="Partager cette page sur Facebook - nouvelle fenêtre" data-statistic='{"name": "declenche-evenement","category": "Partage page","action": "Facebook"}'><i class="icon icon-facebook icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Partager cette page sur Facebook</span></a></li>
