--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -103,6 +103,10 @@
     figure {
       display: inline-block;
     }
+
+    + .ds44-btnStd {
+      margin-top: 3rem;
+    }
 }
 
 .ds44-tabs__content {
