--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -218,6 +218,10 @@
     margin-top: $ds44-margin-base;
 }
 
+.ds44-mb1 {
+    margin-bottom: $ds44-margin-base;
+}
+
 .ds44-mr1 {
     margin-right: $ds44-margin-base;
 }
