--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -312,8 +312,16 @@ figure {
         height: 300px;
     }
 
-    .ds44-imgCaption {
-        display: none;
+    .ds44-imgCaption { /* equivault à sr-only : masquage accessible */
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap; /* added line */
+      border: 0;
     }
 
 }
