--- a/docs/_includes/FAQ/FAQ-corpsPage.html
+++ b/docs/_includes/FAQ/FAQ-corpsPage.html
@@ -1,4 +1,4 @@
-<section class="ds44--xxl-padding-b">
+<section class="ds44--xxl-padding-tb">
     <header class="txtcenter ds44--xxl-padding-b">
       <h2 class="h2-like center">Vous avez une question ?</h2>
     </header>
