--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -107,6 +107,19 @@
     + .ds44-btnStd {
       margin-top: 3rem;
     }
+    
+    .ds44-wsg-encadreGris {
+        background-color : transparent  !important;
+        .ds44-box.ds44-card.ds44-bgGray  {
+            background-color : transparent  !important;
+            
+            &:hover,
+            &:focus,
+            &:active {
+                box-shadow : none !important;
+            }
+        }
+    }
 }
 
 .ds44-tabs__content {
