Style CSS manquant wsg-transparent

--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -109,6 +109,9 @@
     }
     
     .ds44-wsg-transparent {
+        
+        background-color: transparent !important;
+        
         &:hover,
         &:focus,
         &:active {
