Ajout classe wsg no padding

--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -118,6 +118,10 @@
             box-shadow : none !important;
         }
     }
+    
+    .ds44-wsg-noPadding {
+        padding: 0 !important;   
+    }
 }
 
 .ds44-tabs__content {
