Evol : styles pour emojis Twitter
Si emoji présents dans fils Twitters ils sont par défaut trop gros. Ce style permet de les réduire.

--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -230,6 +230,14 @@ figure {
     }
 }
 
+/* Emoji présents dans les fils twitter */
+.emoji-tweet {
+    height: 1.25em;
+    width: 1.25em;
+    padding: 0px 0.05em 0px 0.1em;
+    vertical-align: -0.2em;
+ }
+
 /* =======
   MEDIA QUERIES
   === */
