No linebreak on odd titles - timeline

--- a/framework/scss/components/_timeline.scss
+++ b/framework/scss/components/_timeline.scss
@@ -109,6 +109,7 @@
         &:nth-child(even) {
             margin-right: 0;
             margin-left: calc(50% + 5rem);
+            white-space: nowrap; // s'il y a un espace, passait automatiquement à la ligne
 
             @media (max-width: $ds44-medium - .0625) {
                 margin-left: 4rem;
