--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -200,6 +200,8 @@ $ds44-error             : #DC3545             !default;
 $ds44-error-bg          : #FEF4F5             !default;
 $ds44-flat-overlay      : rgba(0, 0, 0, 0.4)  !default;
 $ds44-app-color         : #F8B323             !default;
+$ds44-app-orangeFlag    : #FFC134             !default;
+$ds44-app-redFlag    : #DC3545             !default;
 
 // Semantic colors
 $ds44-color-base        : $ds44-dark      !default;
