--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -141,6 +141,29 @@
         transition-property: opacity;
         transition-timing-function: ease;
     }
+    
+    .ds44-cardTitle {
+        .ds44-icoInfoRoutes {
+          margin-right: 15px;
+          padding: 5px;
+          border-radius: 50%;
+          font-size: 1.2em;
+          vertical-align: baseline;
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          text-align: center;
+
+          &.orangeFlag {
+            background: $ds44-app-orangeFlag;
+            color: $ds44-dark;
+          }
+          &.redFlag {
+            background: $ds44-app-redFlag;
+            color: $ds44-light;
+          }
+        }
+    }
 }
 
 a.ds44-card {
