--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -212,10 +212,10 @@
     margin-bottom: 10px;
 }
 
-.PortletCarousel + .PortletPush {
-  padding-top: 0;
-  margin-top: -4rem;
-}
+// .PortletCarousel + .PortletPush {
+//   padding-top: 0;
+//   margin-top: -4rem;
+// }
 
 .PortletPush {
   padding: 2rem 2rem 4rem 2rem;
