--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -141,7 +141,7 @@
         transition-property: opacity;
         transition-timing-function: ease;
     }
-    
+
     .ds44-cardTitle {
         .ds44-icoInfoRoutes {
           margin-right: 15px;
@@ -369,6 +369,29 @@ figure[role=figure]  + .ds44-card__section {
         @media (max-width: $ds44-small - .0625) {
             min-height: 100%;
         }
+    }
+}
+
+.ds44-card--horizontal {
+    &--inforoutes {
+
+      &:hover,
+      &:focus,
+      &:active,
+      &.active {
+        box-shadow: none;
+      }
+      .ds44-card__section--horizontal {
+        padding: 1rem;
+        display: block;
+        width: 100%;
+        text-align: center;
+
+        p {
+          margin: 0;
+          line-height: 1.2em;
+        }
+      }
     }
 }
 
