--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -238,6 +238,10 @@ figure {
     vertical-align: -0.2em;
  }
 
+ .iframe_inforoutes > * {
+   width: 100%;
+ }
+
 /* =======
   MEDIA QUERIES
   === */
