--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -413,7 +413,7 @@ figure[role=figure]  + .ds44-card__section {
             padding: 0 10px;
           }
 
-          ul li {
+           li {
             display: inline-block;
             padding: 10px 20px 10px 0;
             background: url(../../../assets/images/right.png) no-repeat right 5px center;
