--- a/docs/_includes/composants-transverses/inc-calendrier-assmat.html
+++ b/docs/_includes/composants-transverses/inc-calendrier-assmat.html
@@ -1,9 +1,9 @@
-<p role="heading" aria-level="3">{{ include.title }}</p>
-<table class="tabDispos" summary="chaque ligne correspond à un créneau, chaque colonne à une journée de la semaine">
+<p role="heading" aria-level="2">{{ include.title }}</p>
+<table class="tabDispos">
   <caption class="visually-hidden">{{ include.title }}</caption>
   <tbody>
     <tr>
-      <th>&nbsp;</th>
+      <td>&nbsp;</td>
       <th scope="col">L</th>
       <th scope="col">M</th>
       <th scope="col">M</th>
@@ -14,63 +14,63 @@
     </tr>
     <tr>
       <th scope="row">Avant l'école</th>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non disponible"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
       <th scope="row">Matin</th>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
       <th scope="row">Midi</th>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
       <th scope="row">Après midi</th>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
       <th scope="row">Après l'école</th>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauDispo.svg" class="creneauDispo" alt="Créneau disponible"><img src="../../assets/images/creneauDispoPrint.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
     <tr>
       <th scope="row">Nuit</th>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
-      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint"></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
+      <td><img src="../../assets/images/creneauNonDispo.svg" class="creneauNonDispo" alt="Créneau non travaillé"><img src="../../assets/images/creneauNonDispo.svg" class="PictoCreneauPrint" alt=""></td>
     </tr>
   </tbody>
 </table>
