--- a/docs/_includes/footer/footer-assmat.html
+++ b/docs/_includes/footer/footer-assmat.html
@@ -2,10 +2,10 @@
     <section class="ds44-container-large ds44--xl-padding-tb">
         <div class="grid-12-small-1 has-gutter-l">
             <div class="col-3-small-1">
-                <div class="ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
-                    <img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm ds44-logo ds44-valignTop ds44-inblLinks" />
-                    <img src="../../assets/images/logos/footer/Caisse_d_allocations_familiales_france_logo.svg" alt="Caisse l'allocations familiales de France" class="ds44-logo--label ds44-valignTop ds44-inblLinks" />
-                </div>
+                <ul class="ds44-mb3 ds44-list ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
+                    <li class="ds44-inlineBlock"><img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm ds44-logo ds44-valignTop ds44-inblLinks" /></li>
+                    <li class="ds44-inlineBlock"><img src="../../assets/images/logos/footer/Caisse_d_allocations_familiales_france_logo.svg" alt="Caisse l'allocations familiales de France" class="ds44-logo--label ds44-valignTop ds44-inblLinks" /></li>
+                </ul>
             </div>
             <div class="col-6-small-1">
                 {% include partage/partage-footer.html %}
