Evol : ajout d'un lien "cookies" dans le footer
Pour ouverture de la modale Orejime

--- a/docs/_includes/footer/footer-LA.html
+++ b/docs/_includes/footer/footer-LA.html
@@ -32,6 +32,7 @@
             <li class="ds44-footerLink"><a href="#">Marchés publics</a></li>
             <li class="ds44-footerLink"><a href="#">Enquêtes publiques</a></li>
             <li class="ds44-footerLink"><a href="#">Espace contributeurs</a></li>
+            <li class="ds44-footerLink"><a href="#" class="ds44-js-orejime-show" role="button" tabindex="0">Cookies</a></li>
         </ul>
     </section>
 
