--- a/docs/_includes/footer/footer-assmat.html
+++ b/docs/_includes/footer/footer-assmat.html
@@ -4,7 +4,7 @@
             <div class="col-3-small-1">
                 <ul class="ds44-mb3 ds44-list ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
                     <li class="ds44-inlineBlock"><img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm ds44-logo ds44-valignTop ds44-inblLinks" /></li>
-                    <li class="ds44-inlineBlock"><img src="../../assets/images/logos/footer/Caisse_d_allocations_familiales_france_logo.svg" alt="Caisse l'allocations familiales de France" class="ds44-logo--label ds44-valignTop ds44-inblLinks" /></li>
+                    <li class="ds44-inlineBlock"><img src="../../assets/images/logos/footer/Caisse_d_allocations_familiales_france_logo.png" alt="Caisse l'allocations familiales de France" class="ds44-logo--label ds44-valignTop ds44-inblLinks" /></li>
                 </ul>
             </div>
             <div class="col-6-small-1">
